<resources>
    <string name="app_name">解魔方</string>

    <string name="title_section1">复原魔方</string>
    <string name="title_section2">打乱魔方</string>
    <string name="title_section3">关于</string>

    <string name="mainTab_section1">速解魔方</string>
    <string name="mainTab_section2">复原历史</string>
    <string name="mainTab_section3">计时复原</string>

    <string name="solver_btn_1">连接</string>
    <string name="solver_btn_2">打乱</string>
    <string name="solver_btn_3">扫描</string>
    <string name="solver_btn_4">自定义</string>

    <string name="upsetTab_section1">随机打乱</string>
    <string name="upsetTab_section2">固定花样</string>

    <string name="mindcont">©2016 MINDCONT公司</string>
    <string name="about">这是一个关于梦想和勇气的故事\n在奋斗的道路上\n我们感谢我们那最初的101个梦想的赞助商\n在这个喧闹的世界\n我们执着前行\n无论黑或白\n在未来的道路上\n我们始终与您同在</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="just_now">Just now</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_scramble">Toggle Scramble</string>
    <string name="menu_solve">Toggle Solve</string>
    <string name="menu_reset_cube">Reset Cube</string>
    <string name="menu_reset_camera">Reset Camera</string>

    <string name="input_return">Return</string>
    <string name="input_colour_cube">"Color the cube's tiles"</string>
    <string name="input_solve">Solve!</string>

    <string name="tv_state">未连接</string>
    <string name="tv_bluetooth_state_discover">正在扫描</string>
    <string name="tv_bluetooth_state_enable">已启用蓝牙</string>
    <string name="tv_custom_up_color">蓝色</string>
    <string name="tv_custom_left_color">白\n色</string>
    <string name="tv_custom_right_color">黄色</string>
    <string name="tv_custom_bottom_color">绿色</string>
    <string name="tv_custom_front_color">红色</string>
    <string name="tv_custom_back_color">橙色</string>

    <string name="tv_custom_left_sidebar_color">白\n色</string>
    <string name="tv_custom_right_sidebar_color">橙\n色</string>
    <string name="tv_custom_up_sidebar_color">白\n色</string>
    <string name="tv_custom_bottom_sidebar_color">橙\n色</string>
    <string name="tv_custom_front_sidebar_color">白\n色</string>
    <string name="tv_custom_back_sidebar_color">橙\n色</string>

    <string name="start">Start</string>
    <string name="split">Split</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="cross">cross</string>
    <string name="f2l">f2l</string>
    <string name="oll">oll</string>
    <string name="pll">pll</string>

    <string name="lap">lap</string>

    <string name="title_settings_activity">Settings</string>
    <string name="create_random_cube">Create randomized cube</string>
    <string name="clear_cube">Clear cube</string>
    <string name="about_arcs">About A.R.C.S</string>
    <string name="solution">Solution</string>
    <string name="instructionTitle">Set colors on %1$s face</string>
    <string name="manualInstructionContent">旋转魔方，直到朝向你的那一面中间色块颜色为 %1$s 并且
      朝上一面中间色块的颜色为 %2$s\n\n当识别有误时，请手动输入正确的色块颜色\n\n在当前面所有色块正确读取完成后，请按向下按钮，继续读取下一面色块的颜色</string>
    <string name="instructionContent">识别</string>
    <string name="backBtnDesc">向后</string>
    <string name="cameraBtnDesc">识别色块</string>
    <string name="forwardBtnDesc">向前</string>

    <string name="rotate">Rotate</string>

    <string name="dialog_title_cube_input_method_prefs">Cube Input Method</string>

    <string-array name="entries_cube_input_method_prefs">
        <item>Manual</item>
    </string-array>
    <string-array name="entryvalues_cube_input_method_prefs">
        <item>manual</item>
    </string-array>

    <string name="summary_cube_input_method_prefs">How to input initial cube configuration: %s</string>
    <string name="title_cube_input_method_prefs">魔方状态输入</string>
    <string name="chooseColorDialogTitle">请选择颜色</string>

    <string-array name="colors">
        <item>橘色</item>
        <item>蓝色</item>
        <item>红色</item>
        <item>绿色</item>
        <item>白色</item>
        <item>黄色</item>
    </string-array>


    <string-array name="errors">
        <item>There are not exactly nine facelets of each color!</item>
        <item>Not all 12 edges exist exactly once!</item>
        <item>Flip error: One edge has to be flipped!</item>
        <item>Not all 8 corners exist exactly once!</item>
        <item>Twist error: One corner has to be twisted!</item>
        <item>Parity error: Two corners or two edges have to be exchanged!</item>
        <item>No solution exists for the given maximum move number!</item>
        <item>Timeout, no solution found within given maximum time!</item>
    </string-array>
    <string name="cube_is_solved">This cube is already solved!</string>

    <string name="solutionStepTitle">Step %1$s of %2$s</string>

    <string-array name="rotationTexts">
        <item>90° clockwise</item>
        <item>180°</item>
        <item>90° counter-clockwise</item>
    </string-array>

    <string-array name="rotationSide">
        <item>front side</item>
        <item>right side</item>
        <item>back side</item>
        <item>left side</item>
        <item>down side</item>
        <item>upper side</item>
    </string-array>

    <!-- Toast Messages -->
    <string name="camera_not_found">未找到摄像头硬件</string>
    <string name="take_photo_help">点击屏幕任意位置进行拍照</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">关于解魔方</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_upset_tab">UpsetTabActivity</string>
</resources>