<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_scramble"
        android:title="@string/menu_scramble"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_solve"
        android:title="@string/menu_solve"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_reset_camera"
        android:title="@string/menu_reset_camera"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_reset_cube"
        android:title="@string/menu_reset_cube"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
