<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end" >


    <org.opencv.android.JavaCameraView
        android:id="@+id/java_camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        opencv:show_fps="true"
        android:layout_alignBottom="@+id/forwardBtn"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/instructionContentText"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:textColor="@color/rubik_color_white"
            android:text="@string/instructionContent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:contentDescription="@string/backBtnDesc"
        android:src="@drawable/ic_action_back"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/cameraBtn" />

    <ImageButton
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:contentDescription="@string/cameraBtnDesc"
        android:src="@drawable/ic_action_camera"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/forwardBtn" />

    <ImageButton
        android:id="@+id/forwardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:scaleType="centerInside"
        android:contentDescription="@string/forwardBtnDesc"
        android:src="@drawable/ic_action_forward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
