<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainTabActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_rubiklogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/rubikcube" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="基于安卓的解魔方控制器"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_connect"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:elevation="2dp"
                android:stateListAnimator="@drawable/translation_selector"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/tv_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/solver_btn_1"
                    android:textSize="23sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_solver"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:background="@drawable/history_card_bg"
                android:elevation="2dp"
                android:stateListAnimator="@drawable/translation_selector"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/tv_solver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/solver_btn_2"
                    android:textSize="23sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_camera"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:elevation="2dp"
                android:stateListAnimator="@drawable/translation_selector"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/tv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/solver_btn_3"
                    android:textSize="23sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_custom"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:elevation="2dp"
                android:stateListAnimator="@drawable/translation_selector"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/tv_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/solver_btn_4"
                    android:textSize="23sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_state"
            android:textSize="23sp" />

    </LinearLayout>
</LinearLayout>